# grpc-starter-template

./: .env.example  Cargo.toml  README.md
src/: main.rs
