[package]
name = "grpc-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5"
dotenvy = "0.15.7"
futures = "0.3"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yellowstone-grpc-client = "11"
yellowstone-grpc-proto = "11"
